crates/kply-cli/tests/snapshots/cli__session_create_apply_read_only_policy_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "error": {
    "code": "policy",
    "exit_code": 1,
    "message": "policy does not allow session creation",
    "policy_violation": {
      "reason": "policy_denied",
      "violations": [
        {
          "message": "policy does not allow session creation"
        }
      ]
    }
  }
}
