crates/kply-cli/tests/snapshots/cli__session_create_apply_read_only_policy_text.snap
---
source: crates/kply-cli/tests/cli.rs
expression: stderr
---
kply error: policy

policy does not allow session creation
