crates/kply-cli/tests/snapshots/cli__session_create_policy_denied_text.snap
---
source: crates/kply-cli/tests/cli.rs
expression: stderr
---
kply error: policy

no enabled policy allows this session plan: policy `warehouse-only` does not allow namespace `shop`
