crates/kply-cli/tests/snapshots/cli__session_create_text.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply session create checkout
session_id: checkout-plan
status: planned
mutation: not_applied
apply: false
planned_resources: 3
  resource: shop/Deployment/checkout-plan-workload
  resource: shop/HTTPRoute/checkout-plan-route
  resource: shop/Service/checkout-plan-service
