crates/kply-cli/tests/snapshots/cli__session_list_missing_kubeconfig.snap
---
source: crates/kply-cli/tests/cli.rs
expression: normalize_output(&stderr)
---
kply error: missing_kubeconfig

kubeconfig could not be read at the configured path; set KUBECONFIG or create ~/.kube/config
